# netlify-discord-slash-commands

./: Cargo.toml  Makefile  README.md
.netlify/: state.json
src/: main.rs
