[package]
name = "_in-progress-netlify-discord-slash-commands"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lamedh_http = "0.3.0"
tokio = "1.2.0"
