[package]
name = "_in-progress-netlify-discord-slash-commands"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.1"
hex = "0.4.3"
lamedh_http = "0.3.0"
lazy_static = "1.4.0"
tokio = "1.2.0"
