[package]
name = "_in-progress-netlify-discord-slash-commands"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
aws_lambda_events = "0.4.0"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
http = "0.2.3"
lamedh_http = "0.3.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.3", features = ["rustls-tls"], default-features = false }
serde = "1.0.125"
serde_json = "1.0.64"
serde_repr = "0.1.6"
tokio = "1.2.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
